...
                        .contentShape(Rectangle())
                        .onTapGesture {
                            viewModel.fetchFilm(with: filmTeaser.imdbID)
                        }
                }
            }
            .accessibilityIdentifier("filmsList")
            .fullScreenCover(item: $viewModel.film, content: { _ in
                FilmDetailsScreen(viewModel: viewModel)
            })
        }
        .onDisappear {
            isViewFocused.toggle()
...
                accessibilityHint: FSAccessibilityString.doubleTapToBackOrSwipeRight) {
                    withAnimation {
                        viewModel.listOfTeasers.removeAll()
                    }
                }
                .buttonStyle(.bordered)
                .accessibilityIdentifier("goBackButton")
                .padding(.horizontal)
        }
    }
}

fileprivate struct FilmsSearchCollectionCell: View {
...
