...
                .scaledToFit()
                .foregroundColor(.purple)
                .frame(width: 250, height: 250)
                .rotationEffect(.degrees(animationManager.rotationAngle))
                .animation(.easeInOut(duration: 2.5), value: animationManager.rotationAngle)
                .accessibilityHidden(true)
                .accessibilityIdentifier("animatingFavouritesImage")
            VStack(alignment: .leading) {
                Text(Description.yourFavouritesAreEmpty)
                    .font(Font.system(size: 50, weight: .bold, design: .rounded))
                    .padding(.top)
                
                Text(Description.addSomeFavourites)
...
